--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="Description" content="Enter your description here" />
+  <meta name="title" property="og:title" content='Matt Day | Composer/Lyricist' />
+  <meta name="image" property="og:image" content="..." />
+  <meta name="description" property="og:description" content="Matt Day is a musical theater songwriter from Indianapolis, IN.  His shows include Paper Swords, Make Me a Match, and Super Mario is Dead." />
+  <meta property="og:url" content='https://www.mattdaymusic.net' />
+  <meta property="og:type" content='website' />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400"
     rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Matt Day | Composer/Lyricist</title>
